SET(LIB_NAME ${SIMCORE_WIDGETS_LIBRARY})

INCLUDE_DIRECTORIES(${QT_INCLUDE_DIRS})

SET(HEADER_PATH ${SimulationCore_SOURCE_DIR}/include/SimCoreWidgets)
SET(SOURCE_PATH ${SimulationCore_SOURCE_DIR}/source/SimCoreWidgets)
SET(UI_PATH ${SimulationCore_SOURCE_DIR}/source/SimCoreWidgets/ui)
SET(QRC_PATH ${SimulationCore_SOURCE_DIR}/source/SimCoreWidgets/resources)

file(GLOB UI_FILES "${UI_PATH}/*.ui")
file(GLOB LIB_PUBLIC_HEADERS "${HEADER_PATH}/*.h")
file(GLOB LIB_SOURCES "*.cpp")

list(REMOVE_ITEM LIB_SOURCES ${SOURCE_PATH}/precomp.cpp)

QT5_ADD_RESOURCES(QRC_RESOURCES ${QRC_PATH}/SimCoreWidgets.qrc)

if (QT_USE_FRAMEWORKS)
   qt5_wrap_cpp(MOC_SOURCES ${LIB_PUBLIC_HEADERS} OPTIONS "-F${QT_LIBRARY_DIR}")
else (QT_USE_FRAMEWORKS)
   qt5_wrap_cpp(MOC_SOURCES ${LIB_PUBLIC_HEADERS})
endif (QT_USE_FRAMEWORKS)

qt5_wrap_ui(UIC_HEADERS ${UI_FILES})

#The ui files are output here, so it must be included.
include_directories(${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDES})

ADD_LIBRARY(${LIB_NAME} SHARED
    ${LIB_PUBLIC_HEADERS}
    ${UIC_HEADERS}
    ${LIB_SOURCES}
    ${MOC_SOURCES}
    ${QRC_RESOURCES}
)

TARGET_LINK_LIBRARIES(${LIB_NAME}
  ${QT_LIBRARIES}
)

LINK_WITH_VARIABLES(${LIB_NAME}

)

INCLUDE(ModuleInstall OPTIONAL)

ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_LARGEFILE_SUPPORT)


IF (MSVC)
  SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES DEFINE_SYMBOL QDESIGNER_EXPORT_WIDGETS)
  SET_TARGET_PROPERTIES(${PROG_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
ENDIF (MSVC)
